--- a/RESTful API Task/package.json
+++ b/RESTful API Task/package.json
@@ -10,12 +10,16 @@
     "babel-core": "^6.23.1",
     "babel-preset-es2015": "^6.22.0",
     "browser-sync": "^2.18.8",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-cache": "^0.4.6",
     "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^3.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^2.0.1"
+    "gulp-uglify": "^2.0.1",
+    "imagemin-pngquant": "^5.0.0"
   },
   "scripts": {
     "gulp": "./node-modules/gulp/bin/gulp.js",
